<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧社区</string>
    <string name="version">1.0.1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">注册</string>
    <string name="complete">完   成</string>
    <string name="find_pwd">找回密码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="app_running">正在运行...</string>
    <string name="error_net">网络连接异常...</string>
    <string name="error_fwq">服务器异常,请稍后再试...</string>
    <string name="date_format_error">数据异常~</string>
    <string name="date_empty">无数据~</string>
    <string name="loading">正在加载...</string>
    <string name="is_logout">是否退出?</string>
    <string name="is_zhuxiao">是否注销当前账号?</string>
    <string name="tip">提示</string>
    <string name="tip_to_update">版本有更新，请下载</string>
    <string name="auto_login">自动登录</string>
    <string name="on_line">在线</string>
    <string name="off_line">离线</string>
    <string name="login">登录</string>
    <string name="login_account_tip">用户名/手机号</string>
    <string name="login_pwd_tip">密码</string>
    <string name="message">消息</string>
    <string name="msg_center">消息中心</string>
    <string name="msg_detail">消息详情</string>
    <string name="to_huimin_msg">点击进入惠民信息</string>
    <string name="account_info">账单信息</string>
    <string name="bill_detail">账单详情</string>
    <string name="pay_info">缴费信息</string>
    <string name="account_balance">家庭账户余额</string>
    <string name="integral_accumulate">累计积分</string>
    <string name="integral_exchange">积分兑换</string>
    <string name="yikatong">一卡通</string>
    <string name="pay_tip">您将支付%1$s元，请选择支付方式：</string>
    <string name="pay_tip2">您将使用社区一卡通支付%1$s元</string>
    <string name="pay_confirm">支付确认</string>
    <string name="pay_yinlian">银联支付</string>
    <string name="pay_zhifubao">支付宝支付</string>
    <string name="pay_shequ">社区一卡通</string>
    <string name="card_number">卡号：</string>
    <string name="balance">余额：</string>
    <string name="bill_info">账单信息</string>
    <string name="online_recharge">在线充值</string>
    <string name="guashi">挂失</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="yicard_recharge">一卡通充值</string>
    <string name="hint_recharge">请填写充值金额</string>
    <string name="select_recharge_mode">请选择充值方式：</string>
    <string name="yicard_guashi">一卡通挂失</string>
    <string name="tip_guashi1">是否确定需要挂失您的社区一卡通？</string>
    <string name="tip_guashi2">确定挂失后请去您所在小区物业处办理挂失后重新开通事宜。</string>
    <string name="tip_guashi_success">您的一卡通挂失成功！</string>
    <string name="tip_forget_pwd">请输入您注册时登记的身份证号码和手机号码，我们将发送一条短信到您的手机，请根据提示修改您的密码.</string>
    <string name="integral_description">积分说明</string>
    <string name="integral_active">积分兑换活动（%1$s至%1$s）：</string>
    <string name="integral_tip">请在活动日期内至物业处完成兑换。</string>
    <string name="plugin_all">全部</string>
    <string name="plugin_huimin">便民服务</string>
    <string name="plugin_zonghe">综合管控</string>
    <string name="plugin_kuapin">跨屏分享</string>
    <string name="plugin_keshi">可视对讲</string>
    <string name="delete">删除</string>
    <string name="pay_youhui">缴费优惠</string>
    <string name="pre_pay">预付费</string>
    <string name="award_integral">奖励积分</string>
    <string name="pay">缴费</string>
    <string name="msg_all">全部</string>
    <string name="msg_huimin">惠民</string>
    <string name="msg_tenement">物业</string>
    <string name="msg_security">安防</string>
    <string name="msg_system">系统</string>
    <string name="msg_clean">清空</string>
    <string name="account_or_pwd_not_empty">账号或密码不能为空</string>
    <string name="menu_family">家庭账单</string>
    <string name="menu_zhuyedingzhi">主页定制</string>
    <string name="menu_update">版本更新</string>
    <string name="menu_serm">应用服务器管理</string>
    <string name="menu_zhuxiao">注销</string>
    <string name="bill_recent">近期账单</string>
    <string name="bill_history">历史账单</string>
    <string name="is_install">是否安装</string>
    <string name="save">保存</string>
    <string name="user_register">新用户注册</string>
    <string name="get_valicode">获取验证码</string>
    <string name="valicode_tip">收到短信后需要在120秒内填写</string>
    <string name="valicode_tip2">方便您密码找回以及参与服务</string>
    <string name="tip2">请输入您注册时登记的手机号和身份证号，将发送一条短信到你手机上，请根据短信提示修改密码</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_shenfenzheng">请输入真实身份证号</string>
    <string name="hint_valicode">请输入验证码</string>
    <string name="next">下一步</string>
    <string name="nick_name">昵称：</string>
    <string name="send">发送</string>
    <string name="hint_old_pwd">请输入原始密码</string>
    <string name="hint_new_pwd">请输入新密码</string>
    <string name="hint_new_pwd_again">请再次输入新密码</string>
    <string name="hint_nick_name">请输入昵称</string>
    <string name="choose_role">请选择注册角色</string>
    <string name="huzhu">户主</string>
    <string name="jiatingchengyuan">家庭成员</string>
    <string name="zuke">租客</string>
    <string name="hint_name">请输入真实姓名</string>
    <string name="hint_huzhu_phone">请输入户主手机号</string>
    <string name="hint_really_pwd">请输入有效密码</string>
    <string name="hint_really_pwd_again">请再次输入密码</string>
    <string name="hint_pwd_validate">至少8位，密码不能包括* 、/ \ ~ ^ !</string>
    <string name="family_address">家庭住址</string>
    <string name="hint_select_province">省</string>
    <string name="hint_select_city">市</string>
    <string name="hint_select_xiangmu">项目</string>
    <string name="hint_select_zutuan">组团</string>
    <string name="hint_select_area">小区</string>
    <string name="hint_select_building">楼栋</string>
    <string name="hint_select_unit">单元</string>
    <string name="hint_select_platedoor">门牌</string>
    <string name="register_success">注册成功~</string>
    <string name="no_enough_money">余额不足!</string>
    <string name="yuan">元</string>
    <string name="fen">分</string>
    <string name="needintegral">需积分</string>
    <string name="please_input_url">请填写地址</string>
    <string name="select_area">选择地区</string>
    <string name="province">省 份</string>
    <string name="city">城 市</string>
    <string name="select_community">选择小区</string>
    <string name="community">小 区</string>
    <string name="zutuan">组 团</string>
    <string name="building">楼 栋</string>
    <string name="unit">单 元</string>
    <string name="doorPlate">门 牌</string>
    <string name="menu_pwdService">密码服务</string>
    <string name="menu_memberManager">成员管理</string>
    <string name="menu_contactUs">联系我们</string>
    <string name="menu_emptyCache">清空缓存</string>
    <string name="personInfo">个人资料</string>
    <string name="user_nickname">用户昵称</string>
    <string name="phonebangding">手机绑定</string>
    <string name="user_limit">用户权限</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="birth">生日</string>
    <string name="is_check">家庭成员注册是否需要审核</string>
    <string name="is_accept_friend">是否允许别人加我为好友</string>
    <string name="shi">是</string>
    <string name="fou">否</string>
    <string name="member_manager">成员管理</string>
    <string name="really_name">真实姓名</string>
    <string name="get_valicode_success">发送成功</string>
    <string name="pwd_same">两次密码必须相同</string>
    <string name="modify_pwd_success">密码修改成功</string>
    <string name="params_error">参数错误</string>
    <string name="valicode_error">验证码错误</string>
    <string name="user_not_exit">用户不存在</string>
    <string name="user_not_activate">用户未激活</string>
    <string name="pwd_error">密码错误</string>
    <string name="modify_pwd_error">密码修改失败</string>
    <string name="old_pwd_error">原密码错误</string>
    <string name="please_select_province">请选择省</string>
    <string name="please_select_city">请选择市</string>
    <string name="please_select_community">请选择小区</string>
    <string name="please_select_zutuan">请选择组团</string>
    <string name="please_select_building">请选择楼栋</string>
    <string name="please_select_unit">请选择单元</string>
    <string name="please_select_doorplate">请选择门牌</string>
    <string name="filemgt_upload_pagetip_pulldownrefresh">下拉刷新</string>
    <string name="filemgt_upload_pagetip_recentupdate">最近更新：</string>
    <string name="filemgt_upload_pagetip_refreshing">正在刷新</string>
    <string name="filemgt_upload_pagetip_releasetorefresh">松开刷新</string>
    <string name="common_pagetip_loading">正在加载……</string>
    <string name="USER_HAS_EXIST">用户已存在</string>
    <string name="register_again"> 同一住址同一用户不能重复注册，请检查注册信息!</string>
    <string name="userinfo_not_exist"> 用户信息不存在，请联系管理员确认该用户是否在物业系统中进行备案，谢谢!</string>
    <string name="householder_has_exist"> 业主已经存在</string>
    <string name="householder_phone_error"> 创建失败,业主手机填写不正确</string>
    <string name="householder_not_exist"> 业主不存在,请检查业主手机号码是否正确</string>
    <string name="householder_need_register"> 该地址的业主需要先注册用户，请稍候!</string>
    <string name="user">用户</string>
    <string name="reallyNameTip">本软件需要实名制注册</string>
    <string name="hefaxing">确定本账户的唯一合法性</string>
    <string name="password">密码</string>
    <string name="please_select">请选择</string>
    <string name="app_manage">应用管理</string>
    <string name="app_noinstall">未安装</string>
    <string name="app_installed">已安装</string>
    <string name="gallery">从相册选择</string>
    <string name="take_photo">拍照</string>
    <string name="uninstall">卸载</string>
    <string name="update">更新</string>
    <string name="down">安装</string>
    <string name="update_info_success">修改成功</string>

</resources>