<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/payprivilege_item_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/frameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/group_up"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="3dp"
            android:paddingTop="3dp" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frameChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pre_pay" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/award_integral" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical"
                android:paddingLeft="10dp" >
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="2dp" >

                <TextView
                    android:id="@+id/tv_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/jiaofei_bg"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/pay" />

                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tv_pay"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/tv_pay"
                    android:text="@string/integral_description" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>